# agent-failure-diagnostician

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent_diagnostician/: __init__.py  classifier.py  config.py  reporter.py  tracer.py
agent_diagnostician/analysis/: confidence.py  constraint_extractor.py  embeddings.py  grounding.py  llm_judge.py  schema.py  similarity.py  traceability.py
agent_diagnostician/detectors/: base.py
agent_diagnostician/detectors/execution/: __init__.py  context_loss.py  infinite_loop.py  token_exhaustion.py
agent_diagnostician/detectors/planning/: __init__.py  goal_failure.py  hallucination.py  reflection_failure.py  tool_use.py
agent_diagnostician/detectors/termination/: __init__.py  premature_termination.py
agent_diagnostician/models/: README.md  enums.py  evidence.py  models.md  result.py  tool_call.py  trace.py
agent_diagnostician/prompts/: parameter_structure.txt  parameter_values.txt  wrong_tool.txt
