[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-diagnostician"
version = "0.1.0"
description = "Framework-agnostic Python library for diagnosing LLM agent execution failures"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

keywords = ["llm", "agents", "diagnostics", "debugging", "langchain", "langgraph"]

dependencies = [
    "pydantic>=2.5.0",
    "sentence-transformers>=2.7.0",
    "scikit-learn>=1.4.2",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_diagnostician*"]